--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   firebase_auth: ^5.1.2
   firebase_storage: ^12.1.0
   dcdg: ^4.0.1
+  responsive_builder: ^0.7.1
+  shared_preferences: ^2.2.3
+  intl: ^0.19.0
+  icons_launcher: ^2.1.7
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +65,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
