--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.2.3
   intl: ^0.19.0
   icons_launcher: ^2.1.7
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
