--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.4 <4.0.0'
+  sdk: '>=2.17.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -43,12 +43,12 @@ dependencies:
   cloud_firestore: ^5.0.2
   firebase_auth: ^5.1.2
   firebase_storage: ^12.1.0
-  dcdg: ^4.0.1
   responsive_builder: ^0.7.1
   shared_preferences: ^2.2.3
   intl: ^0.19.0
   icons_launcher: ^2.1.7
   google_sign_in: ^6.2.1
+  freezed_annotation: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +60,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.2.0
+  analyzer: ^6.4.1
+  json_serializable: ^6.8.0
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
