--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   google_sign_in: ^6.2.1
   freezed_annotation: ^2.4.4
   equatable: ^2.0.5
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
