--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   freezed_annotation: ^2.4.4
   equatable: ^2.0.5
   rxdart: ^0.28.0
+  firebase_database: ^11.1.4
+  uuid: ^4.5.1
+  mockito: ^5.4.4
+  test: ^1.25.2
 
 dev_dependencies:
   flutter_test:
