intrussion detection made

--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   mockito: ^5.4.4
   test: ^1.25.2
   video_player: ^2.8.2
+  flutter_local_notifications: ^18.0.1
+  flutter_background_service: ^5.0.5
+  device_info_plus: ^11.0.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
