--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -59,7 +59,10 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   flutter_background_service: ^5.0.5
   device_info_plus: ^11.0.1
-  permission_handler: ^11.3.1
+  permission_handler: ^11.3.0
+  camera: ^0.10.5+9
+  google_ml_kit: ^0.16.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
