--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   camera: ^0.10.5+9
   google_ml_kit: ^0.16.3
   path_provider: ^2.1.2
+  webview_flutter: ^4.8.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
