--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   path_provider: ^2.1.2
   webview_flutter: ^4.8.0
   http: ^1.1.0
+  tflite_flutter: ^0.10.4
+  fl_chart: ^0.66.1
 
 dev_dependencies:
   flutter_test:
