--- a/home_automation/pubspec.yaml
+++ b/home_automation/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   http: ^1.1.0
   tflite_flutter: ^0.10.4
   fl_chart: ^0.66.1
+  timer_builder: ^2.0.0
 
 dev_dependencies:
   flutter_test:
